--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/diego-a-ab77a0180">LinkedIn</a> |
         <i class="fab fa-github"></i> <a href="https://github.com/DiegoAlvesprogramer">GitHub</a>
       </p>
-      <a class="download-btn" href="curriculo-diego.pdf" download><i class="fas fa-download"></i> Baixar Currículo em PDF</a>
+      <a class="download-btn" href="Curriculo Diego Analista.pdf" download><i class="fas fa-download"></i> Baixar Currículo em PDF</a>
     </div>
 
     <div class="section">
